--- a/glow_tts.ipynb
+++ b/glow_tts.ipynb
@@ -6,7 +6,7 @@
       "name": "Glow-tts.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNwj5p9NKsOaBHCgX7i0uDP",
+      "authorship_tag": "ABX9TyP9ubNJ9dcea7Upd8zldR4B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -191,7 +191,7 @@
         "import glob\n",
         "import os\n",
         "\n",
-        "model_dir = \"/logs\"\n",
+        "model_dir = \"/content/glow-tts/logs\"\n",
         "hps = utils.get_hparams_from_dir(model_dir)\n",
         "\n",
         "model = models.FlowGenerator(\n",
@@ -199,7 +199,7 @@
         "                              out_channels=hps.data.n_mel_channels,\n",
         "                              **hps.model).to(\"cuda\")\n",
         "\n",
-        "f_list = glob.glob(os.path.join(\"/logs\", \"*.pth\"))\n",
+        "f_list = glob.glob(os.path.join(model_dir, \"*.pth\"))\n",
         "latest_checkpoint_path = f_list[-1]\n",
         "\n",
         "utils.load_checkpoint(latest_checkpoint_path, model)\n",
