--- a/GoogleWavsToText.ipynb
+++ b/GoogleWavsToText.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1-RJT9WxrI11D7NAAU1Mimk8b-4GYJtxA",
-      "authorship_tag": "ABX9TyOT51Yel4qg4Vn/uFTBqrNz",
+      "authorship_tag": "ABX9TyNS3MgFY3j2T0pjd8qdXrem",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -217,8 +217,10 @@
       "source": [
         "import os\n",
         "os.environ['GOOGLE_APPLICATION_CREDENTIALS'] = '/content/gce_credentials.json'\n",
+        "!ls -l $GOOGLE_APPLICATION_CREDENTIALS\n",
         "\n",
-        "!ls -l $GOOGLE_APPLICATION_CREDENTIALS"
+        "from google.cloud import speech_v1\n",
+        "from google.cloud.speech_v1 import enums"
       ],
       "execution_count": 5,
       "outputs": [
@@ -239,11 +241,9 @@
         "colab": {}
       },
       "source": [
-        "from google.cloud import speech_v1\n",
-        "from google.cloud.speech_v1 import enums\n",
-        "import os"
+        ""
       ],
-      "execution_count": 7,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -255,11 +255,11 @@
           "base_uri": "https://localhost:8080/",
           "height": 272
         },
-        "outputId": "4990a513-9bbe-48eb-910e-9df0233e1074"
+        "outputId": "56b465c3-d677-49f4-de38-841a7c7e64d0"
       },
       "source": [
+        "!mkdir /content/results\n",
         "files_dir = \"/content/drive/My Drive/wavs-vctk/speakers/p229\"\n",
-        "\n",
         "\n",
         "for filename in os.listdir(files_dir)[:3]:\n",
         "    full_path = os.path.join(files_dir, filename)\n",
@@ -280,27 +280,29 @@
         "\n",
         "    for result in response.results:\n",
         "      print(result)\n",
-        "      #alternative = result.alternatives[0]\n",
-        "      #print(alternative.transcript)"
+        "      new_filename = os.path.join(\"/content/results\", filename + \".txt\")\n",
+        "      file = open(new_filename,\"w\")\n",
+        "      file.write(result.alternatives[0].transcript)\n",
+        "      file.close() \n"
       ],
-      "execution_count": 19,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "alternatives {\n",
             "  transcript: \"we also need a small plastic snake and a big toy frog for the kids\"\n",
-            "  confidence: 0.9511147141456604\n",
+            "  confidence: 0.9511129856109619\n",
             "}\n",
             "\n",
             "alternatives {\n",
             "  transcript: \"when the sunlight strikes raindrops in the ass they act as a prism and Fulmer rainbow\"\n",
-            "  confidence: 0.9298235177993774\n",
+            "  confidence: 0.9298272728919983\n",
             "}\n",
             "\n",
             "alternatives {\n",
             "  transcript: \"ask her to bring these things with her from the store\"\n",
-            "  confidence: 0.8963108062744141\n",
+            "  confidence: 0.8963090777397156\n",
             "}\n",
             "\n"
           ],
