--- a/GoogleWavsToText.ipynb
+++ b/GoogleWavsToText.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1-RJT9WxrI11D7NAAU1Mimk8b-4GYJtxA",
-      "authorship_tag": "ABX9TyNS3MgFY3j2T0pjd8qdXrem",
+      "authorship_tag": "ABX9TyO/kzjpZXw59AiWL7sc1SnP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -253,16 +253,24 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 272
+          "height": 119
         },
-        "outputId": "56b465c3-d677-49f4-de38-841a7c7e64d0"
+        "outputId": "cfa27bd8-faf4-453f-d74c-f4783fdb724f"
       },
       "source": [
+        "!rm -r /content/results\n",
         "!mkdir /content/results\n",
-        "files_dir = \"/content/drive/My Drive/wavs-vctk/speakers/p229\"\n",
         "\n",
-        "for filename in os.listdir(files_dir)[:3]:\n",
-        "    full_path = os.path.join(files_dir, filename)\n",
+        "files_dir = \"p229\"\n",
+        "full_files_path = os.path.join(\"/content/drive/My Drive/wavs-vctk/speakers\", files_dir)\n",
+        "\n",
+        "new_filename = os.path.join(\"/content/results\", \"speaker_p229.csv\")\n",
+        "\n",
+        "file = open(new_filename,\"w\")\n",
+        "\n",
+        "\n",
+        "for i, filename in enumerate(os.listdir(full_files_path)[:3]):\n",
+        "    full_path = os.path.join(full_files_path, filename)\n",
         "    buffer, rate = read_wav_file(full_path)\n",
         "    client = speech_v1.SpeechClient()\n",
         "    \n",
@@ -279,31 +287,23 @@
         "    response = client.recognize(config, audio)\n",
         "\n",
         "    for result in response.results:\n",
-        "      print(result)\n",
-        "      new_filename = os.path.join(\"/content/results\", filename + \".txt\")\n",
-        "      file = open(new_filename,\"w\")\n",
-        "      file.write(result.alternatives[0].transcript)\n",
-        "      file.close() \n"
+        "\n",
+        "      new_item = str(i) + \",\" + os.path.join(files_dir, filename) + \",\" + result.alternatives[0].transcript + \"~\\n\"\n",
+        "      print(new_item)      \n",
+        "      file.write(new_item)\n",
+        "\n",
+        "file.close() \n"
       ],
-      "execution_count": 21,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "alternatives {\n",
-            "  transcript: \"we also need a small plastic snake and a big toy frog for the kids\"\n",
-            "  confidence: 0.9511129856109619\n",
-            "}\n",
+            "0,p229/p229_004.wav,we also need a small plastic snake and a big toy frog for the kids~\n",
             "\n",
-            "alternatives {\n",
-            "  transcript: \"when the sunlight strikes raindrops in the ass they act as a prism and Fulmer rainbow\"\n",
-            "  confidence: 0.9298272728919983\n",
-            "}\n",
+            "1,p229/p229_006.wav,when the sunlight strikes raindrops in the ass they act as a prism and Fulmer rainbow~\n",
             "\n",
-            "alternatives {\n",
-            "  transcript: \"ask her to bring these things with her from the store\"\n",
-            "  confidence: 0.8963090777397156\n",
-            "}\n",
+            "2,p229/p229_002.wav,ask her to bring these things with her from the store~\n",
             "\n"
           ],
           "name": "stdout"
