--- a/MozillaWavsToText.ipynb
+++ b/MozillaWavsToText.ipynb
@@ -6,7 +6,7 @@
       "name": "MozillaWavsToText.ipynb",
       "provenance": [],
       "mount_file_id": "1_qG_gh5OeM9QQBtlbLchA9_ni_CRUp0Z",
-      "authorship_tag": "ABX9TyPbovS8++j1V7iGi9Irc64i",
+      "authorship_tag": "ABX9TyPUrvSpHgtsYnOFtprON5Xa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,73 +32,54 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 935
+          "height": 340
         },
-        "outputId": "c6400363-04e4-49ef-f6c1-5a3777144e9c"
+        "outputId": "fd39e1c8-0187-458a-8c2f-1715f4437431"
       },
       "source": [
-        "!pip install deepspeech==0.6.0\n",
+        "!pip install deepspeech==0.7.3\n",
         "!apt -qq install -y sox"
       ],
-      "execution_count": 7,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: deepspeech==0.6.0 in /usr/local/lib/python3.6/dist-packages (0.6.0)\n",
-            "Requirement already satisfied: numpy>=1.7.0 in /usr/local/lib/python3.6/dist-packages (from deepspeech==0.6.0) (1.18.5)\n",
+            "Collecting deepspeech==0.7.3\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/1e/08/117fe0a444ccf0d9f03e91150ebe3dd829983669bb9a766b290f3d222435/deepspeech-0.7.3-cp36-cp36m-manylinux1_x86_64.whl (9.7MB)\n",
+            "\u001b[K     |████████████████████████████████| 9.7MB 2.7MB/s \n",
+            "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from deepspeech==0.7.3) (1.18.5)\n",
+            "Installing collected packages: deepspeech\n",
+            "  Found existing installation: deepspeech 0.6.0\n",
+            "    Uninstalling deepspeech-0.6.0:\n",
+            "      Successfully uninstalled deepspeech-0.6.0\n",
+            "Successfully installed deepspeech-0.7.3\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/vnd.colab-display-data+json": {
+              "pip_warning": {
+                "packages": [
+                  "deepspeech"
+                ]
+              }
+            }
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "sox is already the newest version (14.4.2-3ubuntu0.18.04.1).\n",
             "The following package was automatically installed and is no longer required:\n",
             "  libnvidia-common-440\n",
             "Use 'apt autoremove' to remove it.\n",
-            "The following additional packages will be installed:\n",
-            "  libmagic-mgc libmagic1 libopencore-amrnb0 libopencore-amrwb0 libsox-fmt-alsa\n",
-            "  libsox-fmt-base libsox3\n",
-            "Suggested packages:\n",
-            "  file libsox-fmt-all\n",
-            "The following NEW packages will be installed:\n",
-            "  libmagic-mgc libmagic1 libopencore-amrnb0 libopencore-amrwb0 libsox-fmt-alsa\n",
-            "  libsox-fmt-base libsox3 sox\n",
-            "0 upgraded, 8 newly installed, 0 to remove and 43 not upgraded.\n",
-            "Need to get 760 kB of archives.\n",
-            "After this operation, 6,717 kB of additional disk space will be used.\n",
-            "Selecting previously unselected package libopencore-amrnb0:amd64.\n",
-            "(Reading database ... 144328 files and directories currently installed.)\n",
-            "Preparing to unpack .../0-libopencore-amrnb0_0.1.3-2.1_amd64.deb ...\n",
-            "Unpacking libopencore-amrnb0:amd64 (0.1.3-2.1) ...\n",
-            "Selecting previously unselected package libopencore-amrwb0:amd64.\n",
-            "Preparing to unpack .../1-libopencore-amrwb0_0.1.3-2.1_amd64.deb ...\n",
-            "Unpacking libopencore-amrwb0:amd64 (0.1.3-2.1) ...\n",
-            "Selecting previously unselected package libmagic-mgc.\n",
-            "Preparing to unpack .../2-libmagic-mgc_1%3a5.32-2ubuntu0.4_amd64.deb ...\n",
-            "Unpacking libmagic-mgc (1:5.32-2ubuntu0.4) ...\n",
-            "Selecting previously unselected package libmagic1:amd64.\n",
-            "Preparing to unpack .../3-libmagic1_1%3a5.32-2ubuntu0.4_amd64.deb ...\n",
-            "Unpacking libmagic1:amd64 (1:5.32-2ubuntu0.4) ...\n",
-            "Selecting previously unselected package libsox3:amd64.\n",
-            "Preparing to unpack .../4-libsox3_14.4.2-3ubuntu0.18.04.1_amd64.deb ...\n",
-            "Unpacking libsox3:amd64 (14.4.2-3ubuntu0.18.04.1) ...\n",
-            "Selecting previously unselected package libsox-fmt-alsa:amd64.\n",
-            "Preparing to unpack .../5-libsox-fmt-alsa_14.4.2-3ubuntu0.18.04.1_amd64.deb ...\n",
-            "Unpacking libsox-fmt-alsa:amd64 (14.4.2-3ubuntu0.18.04.1) ...\n",
-            "Selecting previously unselected package libsox-fmt-base:amd64.\n",
-            "Preparing to unpack .../6-libsox-fmt-base_14.4.2-3ubuntu0.18.04.1_amd64.deb ...\n",
-            "Unpacking libsox-fmt-base:amd64 (14.4.2-3ubuntu0.18.04.1) ...\n",
-            "Selecting previously unselected package sox.\n",
-            "Preparing to unpack .../7-sox_14.4.2-3ubuntu0.18.04.1_amd64.deb ...\n",
-            "Unpacking sox (14.4.2-3ubuntu0.18.04.1) ...\n",
-            "Setting up libmagic-mgc (1:5.32-2ubuntu0.4) ...\n",
-            "Setting up libmagic1:amd64 (1:5.32-2ubuntu0.4) ...\n",
-            "Setting up libopencore-amrnb0:amd64 (0.1.3-2.1) ...\n",
-            "Setting up libopencore-amrwb0:amd64 (0.1.3-2.1) ...\n",
-            "Setting up libsox3:amd64 (14.4.2-3ubuntu0.18.04.1) ...\n",
-            "Setting up libsox-fmt-base:amd64 (14.4.2-3ubuntu0.18.04.1) ...\n",
-            "Setting up libsox-fmt-alsa:amd64 (14.4.2-3ubuntu0.18.04.1) ...\n",
-            "Setting up sox (14.4.2-3ubuntu0.18.04.1) ...\n",
-            "Processing triggers for libc-bin (2.27-3ubuntu1) ...\n",
-            "/sbin/ldconfig.real: /usr/local/lib/python3.6/dist-packages/ideep4py/lib/libmkldnn.so.0 is not a symbolic link\n",
-            "\n",
-            "Processing triggers for man-db (2.8.3-2ubuntu0.1) ...\n",
-            "Processing triggers for mime-support (3.60ubuntu1) ...\n"
+            "0 upgraded, 0 newly installed, 0 to remove and 43 not upgraded.\n"
           ],
           "name": "stdout"
         }
@@ -111,36 +92,27 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 289
+          "height": 153
         },
-        "outputId": "b2a2268e-6592-48a9-bca9-f1b0caa98c48"
+        "outputId": "e977d075-0bfd-484b-b156-71e6906c7cad"
       },
       "source": [
-        "!curl -LO https://github.com/mozilla/DeepSpeech/releases/download/v0.6.0/deepspeech-0.6.0-models.tar.gz\n",
-        "!tar -xvzf deepspeech-0.6.0-models.tar.gz\n",
-        "!ls -l ./deepspeech-0.6.0-models/"
+        "!curl -LO https://github.com/mozilla/DeepSpeech/releases/download/v0.7.3/deepspeech-0.7.3-models.pbmm\n",
+        "!curl -LO https://github.com/mozilla/DeepSpeech/releases/download/v0.7.3/deepspeech-0.7.3-models.scorer"
       ],
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
             "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-            "100   641  100   641    0     0    907      0 --:--:-- --:--:-- --:--:--   906\n",
-            "100 1172M  100 1172M    0     0  15.6M      0  0:01:15  0:01:15 --:--:-- 16.3M\n",
-            "deepspeech-0.6.0-models/\n",
-            "deepspeech-0.6.0-models/lm.binary\n",
-            "deepspeech-0.6.0-models/output_graph.pbmm\n",
-            "deepspeech-0.6.0-models/output_graph.pb\n",
-            "deepspeech-0.6.0-models/trie\n",
-            "deepspeech-0.6.0-models/output_graph.tflite\n",
-            "total 1350664\n",
-            "-rw-r--r-- 1 501 staff 945699324 Dec  3  2019 lm.binary\n",
-            "-rw-r--r-- 1 501 staff 188914896 Dec  3  2019 output_graph.pb\n",
-            "-rw-r--r-- 1 501 staff 188915850 Dec  3  2019 output_graph.pbmm\n",
-            "-rw-r--r-- 1 501 staff  47335752 Dec  3  2019 output_graph.tflite\n",
-            "-rw-r--r-- 1 501 staff  12200736 Dec  3  2019 trie\n"
+            "100   639  100   639    0     0    936      0 --:--:-- --:--:-- --:--:--   935\n",
+            "100  180M  100  180M    0     0  13.0M      0  0:00:13  0:00:13 --:--:-- 16.5M\n",
+            "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+            "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+            "100   641  100   641    0     0    956      0 --:--:-- --:--:-- --:--:--   956\n",
+            "100  909M  100  909M    0     0  15.6M      0  0:00:57  0:00:57 --:--:-- 16.1M\n"
           ],
           "name": "stdout"
         }
@@ -153,31 +125,29 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 221
+          "height": 204
         },
-        "outputId": "1bb45d4d-5d7b-445d-f0d1-c8eb4f422d76"
+        "outputId": "313450fc-e58b-4d6d-86a4-165414fcaeaf"
       },
       "source": [
-        "!deepspeech --model deepspeech-0.6.0-models/output_graph.pb --lm deepspeech-0.6.0-models/lm.binary --trie \\\n",
-        "           ./deepspeech-0.6.0-models/trie --audio \"/content/drive/My Drive/wavs-vctk/speakers/p229/p229_001.wav\""
+        "!deepspeech --model deepspeech-0.7.3-models.pbmm --scorer deepspeech-0.7.3-models.scorer --audio \"/content/drive/My Drive/wavs-vctk/speakers/p229/p229_001.wav\""
       ],
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Loading model from file deepspeech-0.6.0-models/output_graph.pb\n",
-            "TensorFlow: v1.14.0-21-ge77504a\n",
-            "DeepSpeech: v0.6.0-0-g6d43e21\n",
-            "Warning: reading entire model file into memory. Transform model file into an mmapped graph to reduce heap usage.\n",
-            "2020-06-18 08:45:06.631316: I tensorflow/core/platform/cpu_feature_guard.cc:142] Your CPU supports instructions that this TensorFlow binary was not compiled to use: AVX2 FMA\n",
-            "Loaded model in 0.187s.\n",
-            "Loading language model from files deepspeech-0.6.0-models/lm.binary ./deepspeech-0.6.0-models/trie\n",
-            "Loaded language model in 0.000243s.\n",
+            "Loading model from file deepspeech-0.7.3-models.pbmm\n",
+            "TensorFlow: v1.15.0-24-gceb46aa\n",
+            "DeepSpeech: v0.7.3-0-g8858494\n",
+            "2020-06-18 09:19:57.388496: I tensorflow/core/platform/cpu_feature_guard.cc:142] Your CPU supports instructions that this TensorFlow binary was not compiled to use: AVX2 FMA\n",
+            "Loaded model in 0.00872s.\n",
+            "Loading scorer from files deepspeech-0.7.3-models.scorer\n",
+            "Loaded scorer in 0.000214s.\n",
             "Warning: original sample rate (48000) is different than 16000hz. Resampling might produce erratic speech recognition.\n",
             "Running inference.\n",
-            "please cause della\n",
-            "Inference took 2.564s for 6.407s audio file.\n"
+            "please call della\n",
+            "Inference took 1.446s for 2.136s audio file.\n"
           ],
           "name": "stdout"
         }
@@ -188,41 +158,24 @@
       "metadata": {
         "id": "a9EUfo8mlBgO",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "0caaa943-4753-4217-e509-09ff4760ac46"
+        "colab": {}
       },
       "source": [
         "import deepspeech\n",
         "\n",
-        "model_file_path = 'deepspeech-0.6.0-models/output_graph.pbmm'\n",
-        "beam_width = 500\n",
-        "model = deepspeech.Model(model_file_path, beam_width)\n",
+        "model_file_path = 'deepspeech-0.7.3-models.pbmm'\n",
+        "#beam_width = 500\n",
+        "model = deepspeech.Model(model_file_path)\n",
         "\n",
         "# Add language model for better accuracy\n",
-        "lm_file_path = 'deepspeech-0.6.0-models/lm.binary'\n",
-        "trie_file_path = 'deepspeech-0.6.0-models/trie'\n",
-        "lm_alpha = 0.75\n",
-        "lm_beta = 1.85\n",
-        "model.enableDecoderWithLM(lm_file_path, trie_file_path, lm_alpha, lm_beta)"
+        "#lm_file_path = 'deepspeech-0.6.0-models/lm.binary'\n",
+        "#trie_file_path = 'deepspeech-0.6.0-models/trie'\n",
+        "#lm_alpha = 0.75\n",
+        "#lm_beta = 1.85\n",
+        "#model.enableDecoderWithLM(lm_file_path, trie_file_path, lm_alpha, lm_beta)"
       ],
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 9
-        }
-      ]
+      "execution_count": 8,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -261,7 +214,7 @@
         "\n",
         "    return buffer, rate"
       ],
-      "execution_count": 21,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -269,11 +222,7 @@
       "metadata": {
         "id": "IlEobjFllGm-",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 272
-        },
-        "outputId": "ea7cb289-d4c8-4dc0-863e-e41c9823fdc6"
+        "colab": {}
       },
       "source": [
         "import numpy as np\n",
@@ -299,68 +248,18 @@
         "    buffer, rate = read_wav_file(full_path)\n",
         "    data16 = np.frombuffer(buffer, dtype=np.int16)\n",
         "\n",
-        "    output_string = model.stt(data16)\n",
+        "    out = model.sttWithMetadata(data16)\n",
+        "    print(out)\n",
+        "    #output_string = model.stt(data16)\n",
         "\n",
-        "    new_item = str(i) + \",\" + os.path.join(files_dir, filename) + \",\" + output_string + \"~\\n\"\n",
-        "    print(new_item)      \n",
-        "    file.write(new_item)\n",
+        "    #new_item = str(i) + \",\" + os.path.join(files_dir, filename) + \",\" + output_string + \"~\\n\"\n",
+        "    #print(new_item)      \n",
+        "    #file.write(new_item)\n",
         "\n",
         "file.close() "
       ],
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "output_file: /content/output.wav already exists and will be overwritten on build\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "p229_004.wav\n",
-            "resampling\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "output_file: /content/output.wav already exists and will be overwritten on build\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "0,p229/p229_004.wav,we also need a small plastic snake and a big toy frog for the kids~\n",
-            "\n",
-            "p229_006.wav\n",
-            "resampling\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "output_file: /content/output.wav already exists and will be overwritten on build\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "1,p229/p229_006.wav,when the sunlight strikes range up in the air they act as a prism and former rainbow~\n",
-            "\n",
-            "p229_002.wav\n",
-            "resampling\n",
-            "2,p229/p229_002.wav,as had to bring these things with her from the store~\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
