--- a/MozillaWavsToText.ipynb
+++ b/MozillaWavsToText.ipynb
@@ -5,8 +5,9 @@
     "colab": {
       "name": "MozillaWavsToText.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "mount_file_id": "1_qG_gh5OeM9QQBtlbLchA9_ni_CRUp0Z",
-      "authorship_tag": "ABX9TyPUrvSpHgtsYnOFtprON5Xa",
+      "authorship_tag": "ABX9TyOpI+3E8EoyDL9+BH3KqiU1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -158,14 +159,19 @@
       "metadata": {
         "id": "a9EUfo8mlBgO",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3f185bff-27cb-4304-faa6-82c7588f411f"
       },
       "source": [
         "import deepspeech\n",
         "\n",
-        "model_file_path = 'deepspeech-0.7.3-models.pbmm'\n",
-        "#beam_width = 500\n",
-        "model = deepspeech.Model(model_file_path)\n",
+        "model = deepspeech.Model('deepspeech-0.7.3-models.pbmm')\n",
+        "model.setBeamWidth(500)\n",
+        "model.enableExternalScorer('deepspeech-0.7.3-models.scorer')\n",
+        "model.setScorerAlphaBeta(0.75, 1.85)\n",
         "\n",
         "# Add language model for better accuracy\n",
         "#lm_file_path = 'deepspeech-0.6.0-models/lm.binary'\n",
@@ -174,8 +180,21 @@
         "#lm_beta = 1.85\n",
         "#model.enableDecoderWithLM(lm_file_path, trie_file_path, lm_alpha, lm_beta)"
       ],
-      "execution_count": 8,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -222,7 +241,11 @@
       "metadata": {
         "id": "IlEobjFllGm-",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 221
+        },
+        "outputId": "3aa76f82-dea9-45eb-f2b6-df288cb9893d"
       },
       "source": [
         "import numpy as np\n",
@@ -239,7 +262,6 @@
         "\n",
         "file = open(new_filename,\"w\")\n",
         "\n",
-        "\n",
         "for i, filename in enumerate(os.listdir(full_files_path)[:3]):\n",
         "    print(filename)\n",
         "    full_path = os.path.join(full_files_path, filename)\n",
@@ -248,9 +270,8 @@
         "    buffer, rate = read_wav_file(full_path)\n",
         "    data16 = np.frombuffer(buffer, dtype=np.int16)\n",
         "\n",
-        "    out = model.sttWithMetadata(data16)\n",
-        "    print(out)\n",
-        "    #output_string = model.stt(data16)\n",
+        "    output_string = model.stt(data16)\n",
+        "    print(output_string)\n",
         "\n",
         "    #new_item = str(i) + \",\" + os.path.join(files_dir, filename) + \",\" + output_string + \"~\\n\"\n",
         "    #print(new_item)      \n",
@@ -258,33 +279,57 @@
         "\n",
         "file.close() "
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "hPPZBRx6lCMG",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "import numpy as np\n",
-        "\n",
-        "def deepspeech_batch_stt(filename: str, lang: str, encoding: str) -> str:\n",
-        "    buffer, rate = read_wav_file(filename)\n",
-        "    data16 = np.frombuffer(buffer, dtype=np.int16)\n",
-        "    return model.stt(data16)\n",
-        "\n",
-        "# Run tests\n",
-        "for t in TESTCASES:\n",
-        "    print('\\naudio file=\"{0}\"    expected text=\"{1}\"'.format(t['filename'], t['text']))\n",
-        "    print('deepspeech-batch-stt: \"{}\"'.format(\n",
-        "        deepspeech_batch_stt(t['filename'], t['lang'], t['encoding'])\n",
-        "    ))"
-      ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "output_file: /content/output.wav already exists and will be overwritten on build\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "p229_004.wav\n",
+            "resampling\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "output_file: /content/output.wav already exists and will be overwritten on build\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "we also need a small plastic snake and a big toy folk for the kids\n",
+            "p229_006.wav\n",
+            "resampling\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "output_file: /content/output.wav already exists and will be overwritten on build\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "when the sunlight strikes range up in the air they act as a prism and former rainbow\n",
+            "p229_002.wav\n",
+            "resampling\n",
+            "ask had to bring these things with her from the store\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
